chore: Migrate repository to anelson-labs
Due to stupid GitHub limitations, there are features (specifically ARM
runners) available to an org account that simply cannot be obtained by
an individual account for any price.  For that reason I've maintained an
org account `anelson-labs`, to which I move repos once they need those
runners.

That came up very quickly with this project as I want to produce ARM
binaries, so I'm moving this repo just a few hours after it was created.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ authors      = ["Adam Nelson <anelson@apocryph.org>"]
 categories   = ["command-line-utilities", "development-tools"]
 description  = "Rust version of uvx or npx, for use with Rust crates"
 edition      = "2024"
-homepage     = "https://github.com/anelson/cgx"
+homepage     = "https://github.com/anelson-labs/cgx"
 license      = "MIT OR Apache-2.0"
 name         = "cgx"
 readme       = "README.md"
-repository   = "https://github.com/anelson/cgx"
+repository   = "https://github.com/anelson-labs/cgx"
 rust-version = "1.85.1"
 version      = "0.0.2"
 
