ci: Fix release-plz workflow issues
Previously I thought using GITHUB_TOKEN was a mistake here, but actually
it's a must; if I use the `RELEASE_PLZ_TOKEN` secret, which is my
personal token, the the PR is opened by me and that means I can't
approve it.  That's just sloppy.

Whilst at it, I also updated the check for the org `anelson` to
`anelson-labs` since that's where this repo lives now.

--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    if: ${{ github.repository_owner == 'anelson' }}
+    if: ${{ github.repository_owner == 'anelson-labs' }}
     steps:
       - &checkout
         name: Checkout repository
@@ -30,7 +30,7 @@ jobs:
         with:
           command: release
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_PLZ_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
   # Create a PR with the new versions and changelog, preparing the next release.
@@ -43,6 +43,7 @@ jobs:
     concurrency:
       group: release-plz-${{ github.ref }}
       cancel-in-progress: false
+    if: ${{ github.repository_owner == 'anelson-labs' }}
     steps:
       - *checkout
       - *install-rust
@@ -52,5 +53,5 @@ jobs:
         with:
           command: release-pr
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_PLZ_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
