ci: Trying to fix broken `release-plz release` GHA workflow job
I don't understand why this is needed.  It was working fine before I
migrated from `anelson` to `anelson-labs`, so I can only assume the
default token scope is more restrictive in the org than in my user.

--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pull-requests: read
     if: ${{ github.repository_owner == 'anelson-labs' }}
     steps:
       - &checkout
