--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -23,7 +23,7 @@ targets = [
 # Path that installers should place binaries in
 install-path = "CARGO_HOME"
 # Whether to install an updater program
-install-updater = true
+install-updater = false
 
 [dist.github-custom-runners]
 # Shitty Github Actions support for ARM runners on personal plans has forced me to host
