--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,26 @@ enum_glob_use = "deny"
 maintenance = { status = "experimental" }
 
 [dependencies]
-clap  = { version = "4.5.48", features = ["derive", "env", "string", "unicode"] }
-snafu = "0.8.9"
+cargo_metadata = "0.20.0"
+clap           = { version = "4.5.48", features = ["derive", "env", "string", "unicode"] }
+directories    = "6.0.0"
+flate2         = "1.1.4"
+indicatif      = "0.18.0"
+reqwest        = { version = "0.12.23", features = ["blocking"] }
+semver         = "1.0.27"
+serde          = { version = "1.0.228", features = ["derive"] }
+serde_json     = "1.0.145"
+sha2           = "0.10.9"
+snafu          = "0.8.9"
+tame-index     = { version = "0.23.0", features = ["sparse"] }
+tar            = "0.4.44"
+tempfile       = "3.23.0"
+url            = "2.5.7"
 
 # The profile that 'dist' will build with
 [profile.dist]
 inherits = "release"
 lto      = "thin"
+
+[dev-dependencies]
+assert_matches = "1.5.0"
