--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,12 @@ semver         = "1.0.27"
 serde          = { version = "1.0.228", features = ["derive"] }
 serde_json     = "1.0.145"
 sha2           = "0.10.9"
+simple-git     = "0.2"
 snafu          = "0.8.9"
 tame-index     = { version = "0.23.0", features = ["sparse"] }
 tar            = "0.4.44"
 tempfile       = "3.23.0"
+tokio          = { version = "1", features = ["rt", "rt-multi-thread"] }
 url            = "2.5.7"
 
 # The profile that 'dist' will build with
