--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ maintenance = { status = "experimental" }
 cargo_metadata = "0.20.0"
 clap           = { version = "4.5.48", features = ["derive", "env", "string", "unicode"] }
 directories    = "6.0.0"
+etcetera       = "0.10.0"
 flate2         = "1.1.4"
 indicatif      = "0.18.0"
 reqwest        = { version = "0.12.23", features = ["blocking"] }
