--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,13 +22,14 @@ maintenance = { status = "experimental" }
 
 [dependencies]
 cargo_metadata = "0.20.0"
+chrono         = { version = "0.4.42", features = ["serde"] }
 clap           = { version = "4.5.48", features = ["derive", "env", "string", "unicode"] }
 directories    = "6.0.0"
 etcetera       = "0.10.0"
 flate2         = "1.1.4"
 indicatif      = "0.18.0"
 reqwest        = { version = "0.12.23", features = ["blocking"] }
-semver         = "1.0.27"
+semver         = { version = "1.0.27", features = ["serde"] }
 serde          = { version = "1.0.228", features = ["derive"] }
 serde_json     = "1.0.145"
 sha2           = "0.10.9"
@@ -38,7 +39,7 @@ tame-index     = { version = "0.23.0", features = ["sparse"] }
 tar            = "0.4.44"
 tempfile       = "3.23.0"
 tokio          = { version = "1", features = ["rt", "rt-multi-thread"] }
-url            = "2.5.7"
+url            = { version = "2.5.7", features = ["serde"] }
 
 # The profile that 'dist' will build with
 [profile.dist]
