--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,13 +27,13 @@ clap           = { version = "4.5.48", features = ["derive", "env", "string", "u
 directories    = "6.0.0"
 etcetera       = "0.10.0"
 flate2         = "1.1.4"
+gix            = { version = "0.73", features = ["blocking-http-transport-reqwest", "max-performance-safe"] }
 indicatif      = "0.18.0"
 reqwest        = { version = "0.12.23", features = ["blocking"] }
 semver         = { version = "1.0.27", features = ["serde"] }
 serde          = { version = "1.0.228", features = ["derive"] }
 serde_json     = "1.0.145"
 sha2           = "0.10.9"
-simple-git     = "0.2"
 snafu          = "0.8.9"
 tame-index     = { version = "0.23.0", features = ["sparse"] }
 tar            = "0.4.44"
