--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ clap           = { version = "4.5.48", features = ["derive", "env", "string", "u
 directories    = "6.0.0"
 etcetera       = "0.10.0"
 flate2         = "1.1.4"
-gix            = { version = "0.73", features = ["blocking-http-transport-reqwest", "max-performance-safe"] }
+gix            = { version = "0.73", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
 indicatif      = "0.18.0"
 reqwest        = { version = "0.12.23", features = ["blocking"] }
 semver         = { version = "1.0.27", features = ["serde"] }
