--- a/Cargo.toml
+++ b/Cargo.toml
@@ -114,7 +114,8 @@ serde-cyclonedx = "0.10.0"
 serde_json      = "1.0.145"
 sha2            = "0.10.9"
 snafu           = "0.8.9"
-tame-index      = { version = "0.23.0", features = ["sparse"] }
+# Temporarily using forked version until https://github.com/EmbarkStudios/tame-index/issues/94 is fixed
+tame-index      = { git = "https://github.com/anelson/tame-index", branch = "fix/94-windows-lock-always-times-out", features = ["sparse"] }
 tar             = "0.4.44"
 tempfile        = "3.23.0"
 tokio           = { version = "1", features = ["rt", "rt-multi-thread"] }
