--- a/Cargo.toml
+++ b/Cargo.toml
@@ -114,14 +114,13 @@ serde-cyclonedx = "0.10.0"
 serde_json      = "1.0.145"
 sha2            = "0.10.9"
 snafu           = "0.8.9"
-# Temporarily using forked version until https://github.com/EmbarkStudios/tame-index/issues/94 is fixed
-tame-index = { git = "https://github.com/anelson/tame-index", branch = "fix/94-windows-lock-always-times-out", features = ["sparse"] }
-tar        = "0.4.44"
-tempfile   = "3.23.0"
-tokio      = { version = "1", features = ["rt", "rt-multi-thread"] }
-url        = { version = "2.5.7", features = ["serde"] }
-uuid       = { version = "1.18.1", features = ["v4"] }
-which      = "8.0.0"
+tame-index      = { version = "0.23.1", features = ["sparse"] }
+tar             = "0.4.44"
+tempfile        = "3.23.0"
+tokio           = { version = "1", features = ["rt", "rt-multi-thread"] }
+url             = { version = "2.5.7", features = ["serde"] }
+uuid            = { version = "1.18.1", features = ["v4"] }
+which           = "8.0.0"
 
 [target.'cfg(windows)'.dependencies]
 ctrlc = "3.5"
@@ -135,3 +134,4 @@ lto      = "thin"
 assert-json-diff = "2.0.2"
 assert_matches   = "1.5.0"
 insta            = "1.43.2"
+rand             = "0.9.2"
