--- a/Cargo.toml
+++ b/Cargo.toml
@@ -130,6 +130,9 @@ ctrlc = "3.5"
 inherits = "release"
 lto      = "thin"
 
+[build-dependencies]
+vergen-gix = { version = "1.0.9", default-features = false }
+
 [dev-dependencies]
 assert-json-diff = "2.0.2"
 assert_matches   = "1.5.0"
