--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,55 @@ repository   = "https://github.com/anelson-labs/cgx"
 rust-version = "1.85.1"
 version      = "0.0.3"
 
+[badges]
+maintenance = { status = "experimental" }
+
+[dependencies]
+build-context      = "0.1.3"
+cargo_metadata     = "0.20.0"
+chrono             = { version = "0.4.42", features = ["serde"] }
+clap               = { version = "4.5.48", features = ["derive", "env", "string", "unicode"] }
+directories        = "6.0.0"
+etcetera           = "0.10.0"
+flate2             = "1.1.4"
+gix                = { version = "0.73", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
+home               = "0.5.11"
+ignore             = "0.4.23"
+indicatif          = "0.18.0"
+reqwest            = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls", "http2", "charset", "gzip", "system-proxy"] }
+semver             = { version = "1.0.27", features = ["serde"] }
+serde              = { version = "1.0.228", features = ["derive"] }
+serde-cyclonedx    = "0.10.0"
+serde_json         = "1.0.145"
+sha2               = "0.10.9"
+snafu              = "0.8.9"
+tame-index         = { version = "0.23.1", features = ["sparse"] }
+tar                = "0.4.44"
+tempfile           = "3.23.0"
+tokio              = { version = "1", features = ["rt", "rt-multi-thread"] }
+tracing            = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
+url                = { version = "2.5.7", features = ["serde"] }
+uuid               = { version = "1.18.1", features = ["v4"] }
+which              = "8.0.0"
+
+[target.'cfg(windows)'.dependencies]
+ctrlc = "3.5"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto      = "thin"
+
+[build-dependencies]
+vergen-gix = { version = "1.0.9", default-features = false }
+
+[dev-dependencies]
+assert-json-diff = "2.0.2"
+assert_matches   = "1.5.0"
+insta            = "1.43.2"
+rand             = "0.9.2"
+
 #
 # Enable some optional lints that are not on by default but we want to enforce
 #
@@ -91,50 +140,3 @@ unused_self                        = "warn"
 useless_transmute                  = "warn"
 verbose_file_reads                 = "warn"
 zero_sized_map_values              = "warn"
-
-[badges]
-maintenance = { status = "experimental" }
-
-[dependencies]
-build-context   = "0.1.3"
-cargo_metadata  = "0.20.0"
-chrono          = { version = "0.4.42", features = ["serde"] }
-clap            = { version = "4.5.48", features = ["derive", "env", "string", "unicode"] }
-directories     = "6.0.0"
-etcetera        = "0.10.0"
-flate2          = "1.1.4"
-gix             = { version = "0.73", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
-home            = "0.5.11"
-ignore          = "0.4.23"
-indicatif       = "0.18.0"
-reqwest         = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls", "http2", "charset", "gzip", "system-proxy"] }
-semver          = { version = "1.0.27", features = ["serde"] }
-serde           = { version = "1.0.228", features = ["derive"] }
-serde-cyclonedx = "0.10.0"
-serde_json      = "1.0.145"
-sha2            = "0.10.9"
-snafu           = "0.8.9"
-tame-index      = { version = "0.23.1", features = ["sparse"] }
-tar             = "0.4.44"
-tempfile        = "3.23.0"
-tokio           = { version = "1", features = ["rt", "rt-multi-thread"] }
-url             = { version = "2.5.7", features = ["serde"] }
-uuid            = { version = "1.18.1", features = ["v4"] }
-which           = "8.0.0"
-
-[target.'cfg(windows)'.dependencies]
-ctrlc = "3.5"
-
-# The profile that 'dist' will build with
-[profile.dist]
-inherits = "release"
-lto      = "thin"
-
-[build-dependencies]
-vergen-gix = { version = "1.0.9", default-features = false }
-
-[dev-dependencies]
-assert-json-diff = "2.0.2"
-assert_matches   = "1.5.0"
-insta            = "1.43.2"
-rand             = "0.9.2"
