--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: 1.85.1
+          components: rustfmt, clippy
 
       - name: Install just
         uses: taiki-e/install-action@v2
