--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,9 +45,11 @@ cargo_metadata     = "0.20.0"
 chrono             = { version = "0.4.42", features = ["serde"] }
 clap               = { version = "4.5.48", features = ["derive", "env", "string", "unicode"] }
 etcetera           = "0.10.0"
+figment            = { version = "0.10.19", features = ["toml", "env"] }
 flate2             = "1.1.4"
 gix                = { version = "0.73", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
 home               = "0.5.11"
+humantime-serde    = "1.1.1"
 ignore             = "0.4.23"
 reqwest            = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls", "http2", "charset", "gzip", "system-proxy"] }
 semver             = { version = "1.0.27", features = ["serde"] }
@@ -55,6 +57,7 @@ serde              = { version = "1.0.228", features = ["derive"] }
 serde-cyclonedx    = "0.10.0"
 serde_json         = "1.0.145"
 sha2               = "0.10.9"
+shellexpand        = "3.1.1"
 snafu              = "0.8.9"
 tame-index         = { version = "0.23.1", features = ["sparse"] }
 tar                = "0.4.44"
@@ -77,6 +80,7 @@ assert-json-diff = "2.0.2"
 assert_matches   = "1.5.0"
 insta            = "1.43.2"
 rand             = "0.9.2"
+toml             = "0.9.8"
 
 # The profile that 'dist' will build with
 [profile.dist]
