--- a/testdata/configs/work/project1/cgx.toml
+++ b/testdata/configs/work/project1/cgx.toml
@@ -1,1 +1,8 @@
+# Test config file in a hierarchy of config files used for testing the config module
+resolve_cache_timeout = "3m"
 
+[tools]
+project1_tool = "1"
+
+[aliases]
+dummytool = "project1"
