--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,8 +80,11 @@ vergen-gix = { version = "1.0.9", default-features = false }
 
 [dev-dependencies]
 assert-json-diff = "2.0.2"
+assert_cmd       = { version = "2.0.17", features = ["color-auto"] }
+assert_fs        = { version = "1.1.3", features = ["color-auto"] }
 assert_matches   = "1.5.0"
 insta            = "1.43.2"
+predicates       = "3.1.3"
 rand             = "0.9.2"
 toml             = "0.9.8"
 
