--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,8 +80,11 @@ vergen-gix = { version = "1.0.9", default-features = false }
 
 [dev-dependencies]
 assert-json-diff = "2.0.2"
+assert_cmd       = { version = "2.0.17", features = ["color-auto"] }
+assert_fs        = { version = "1.1.3", features = ["color-auto"] }
 assert_matches   = "1.5.0"
 insta            = "1.43.2"
+predicates       = "3.1.3"
 rand             = "0.9.2"
 toml             = "0.9.8"
 
@@ -94,14 +97,20 @@ lto      = "thin"
 # Enable some optional lints that are not on by default but we want to enforce
 #
 # This is inspired by the Embark Studios list at <https://github.com/EmbarkStudios/rust-ecosystem/blob/main/lints.toml>
-#
+# and the cargo-edit project list at <https://github.com/killercup/cargo-edit/blob/master/Cargo.toml>
 
 [lints.rust]
-future_incompatible = { level = "warn", priority = -1 }
-nonstandard_style   = { level = "warn", priority = -1 }
-rust_2018_idioms    = { level = "warn", priority = -1 }
-unexpected_cfgs     = "warn"
-unsafe_code         = "forbid"
+future_incompatible    = { level = "warn", priority = -1 }
+nonstandard_style      = { level = "warn", priority = -1 }
+rust_2018_idioms       = { level = "warn", priority = -1 }
+unexpected_cfgs        = "warn"
+unnameable_types       = "warn"
+unreachable_pub        = "warn"
+unsafe_code            = "forbid"
+unsafe_op_in_unsafe_fn = "warn"
+unused_lifetimes       = "warn"
+unused_macro_rules     = "warn"
+unused_qualifications  = "warn"
 
 [lints.clippy]
 await_holding_lock                 = "warn"
