feat: Add `cargo-cgx` binary crate for cargo subcommand integration
This isn't, strictly speaking, necessary.  The `cargo-cgx` binary has
literally the same `main()` function as the `cgx` binary, both deferring
to the `cgx` lib for the implementation.

Why duplicate the build effort and publish what is practically a
duplicate crate?  A few reasons:

- Prevents typosquatting of the `cargo-cgx` name on crates.io.  Part of
  the integration of `cgx` into Rust tooling will be adding a `cargo
  cgx` alias to the workspace, so users will habituate to `cargo cgx`.
  It's not unreasonable to think that some might try to install
  `cargo-cgx`, and if that happens it's important that they get the
  actual `cgx` and not some malicious imposter.
- Perhaps some users will just prefer to use a `cargo` subcommand.  Who
  am I to judge?

Closes #14

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members  = ["cgx", "cgx-core"]
+members  = ["cgx", "cgx-core", "cargo-cgx"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -9,6 +9,7 @@ assert_fs          = { version = "1.1.3", features = ["color-auto"] }
 assert_matches     = "1.5.0"
 build-context      = "0.1.3"
 cargo_metadata     = "0.20.0"
+cgx                = { version = "0.0.3", path = "cgx" }
 cgx-core           = { version = "0.0.3", path = "cgx-core" }
 chrono             = { version = "0.4.42", features = ["serde"] }
 clap               = { version = "4.5.51", features = ["derive", "env", "string", "unicode"] }
