--- a/cgx-core/Cargo.toml
+++ b/cgx-core/Cargo.toml
@@ -6,7 +6,7 @@ edition      = "2024"
 homepage     = "https://github.com/anelson-labs/cgx"
 license      = "MIT OR Apache-2.0"
 name         = "cgx-core"
-readme       = "README.md"
+readme       = "../README.md"
 repository   = "https://github.com/anelson-labs/cgx"
 rust-version = "1.85.1"
 version      = "0.0.3"
