refactor: DRY up the crate `Cargo.toml` files by using workspace package defaults
There was an excess of duplication in the `Cargo.toml` files for each crate in
the workspace. This commit moves common fields such as `edition`, `rust-version`,
`homepage`, `repository`, and `license` into the workspace `Cargo.toml` file
as workspace package defaults. Each crate's `Cargo.toml` file is updated to
reference these workspace defaults, reducing redundancy and simplifying future
maintenance.

In particular when we increment the MSRV we only have to do it in one
Cargo.toml file now instead of three.

--- a/cargo-cgx/Cargo.toml
+++ b/cargo-cgx/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-authors      = ["Adam Nelson <anelson@apocryph.org>"]
-categories   = ["command-line-utilities", "development-tools"]
-description  = "Cargo subcommand for cgx - run Rust tools quickly without explicit installation"
-edition      = "2024"
-homepage     = "https://github.com/anelson-labs/cgx"
-license      = "MIT OR Apache-2.0"
-name         = "cargo-cgx"
-readme       = "README.md"
-repository   = "https://github.com/anelson-labs/cgx"
-rust-version = "1.85.1"
-version      = "0.0.4"
+authors                = ["Adam Nelson <anelson@apocryph.org>"]
+categories             = ["command-line-utilities", "development-tools"]
+description            = "Cargo subcommand for cgx - run Rust tools quickly without explicit installation"
+edition.workspace      = true
+homepage.workspace     = true
+license.workspace      = true
+name                   = "cargo-cgx"
+readme                 = "README.md"
+repository.workspace   = true
+rust-version.workspace = true
+version                = "0.0.4"
 
 [badges]
 maintenance = { status = "experimental" }
