--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 members  = ["cgx", "cgx-core", "cargo-cgx"]
 resolver = "3"
 
+[workspace.package]
+edition      = "2024"
+rust-version = "1.85.1"
+homepage     = "https://github.com/anelson-labs/cgx"
+repository   = "https://github.com/anelson-labs/cgx"
+license      = "MIT OR Apache-2.0"
+
 [workspace.dependencies]
 assert-json-diff   = "2.0.2"
 assert_cmd         = { version = "2.0.17", features = ["color-auto"] }
