--- a/cgx/Cargo.toml
+++ b/cgx/Cargo.toml
@@ -6,7 +6,7 @@ edition.workspace      = true
 homepage.workspace     = true
 license.workspace      = true
 name                   = "cgx"
-readme                 = "README.md"
+readme                 = "../README.md"
 repository.workspace   = true
 rust-version.workspace = true
 version                = "0.0.4"
