--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
-members  = ["cgx", "cgx-core", "cargo-cgx"]
-resolver = "3"
+default-members = ["cgx"]
+members         = ["cgx", "cgx-core", "cargo-cgx"]
+resolver        = "3"
 
 [workspace.package]
 edition      = "2024"
