ci: Exclude `target/` from `taplo` formatting
Our tests can leave some test TOML files there, some of which are
intentionally not valid.  We don't want `taplo` to trip over them.

--- a/taplo.toml
+++ b/taplo.toml
@@ -1,4 +1,4 @@
-exclude = ["scrap/**", "cgx-core/testdata/configs/**"]
+exclude = ["scrap/**", "cgx-core/testdata/configs/**", "target/**"]
 include = ["**/*.toml"]
 
 [formatting]
