--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -26,13 +26,11 @@ install-path = "CARGO_HOME"
 install-updater = false
 
 [dist.github-custom-runners]
-# Shitty Github Actions support for ARM runners on personal plans has forced me to host
-# this repo in an org on a paid Teams plan.  In this org I have created the following "custom" runners, which are still
-# Github-hosted and managed, but appear as custom runners:
-# - `ubuntu-24.04-arm64` - 2-core · 8 GB RAM · 75 GB SSD
-# - `windows-11-arm64` - 4-core · 16 GB RAM · 150 GB SSD
-#
-# Dist needs to be told to use these
-aarch64-pc-windows-msvc    = "windows-11-arm64"
-aarch64-unknown-linux-gnu  = "ubuntu-24.04-arm64"
-aarch64-unknown-linux-musl = "ubuntu-24.04-arm64"
+aarch64-pc-windows-msvc    = "windows-11-arm"
+aarch64-unknown-linux-gnu  = "ubuntu-24.04-arm"
+aarch64-unknown-linux-musl = "ubuntu-24.04-arm"
+
+# macOS runners: Now that the repo is public, standard GitHub-hosted macOS runners are free!
+# These replace the deprecated macos-13 runners.
+aarch64-apple-darwin = "macos-15"       # ARM64 (M1/M2), free for public repos
+x86_64-apple-darwin  = "macos-15-intel" # Intel x86_64, free for public repos (sunsets Fall 2027)
